--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
-    "reselect": "^4.0.0"
+    "redux-persist": "^6.0.0",
+    "reselect": "^4.0.0",
+    "websocket-extensions": "^0.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
